# csc369-mind-over-matter

./: .gitignore  Dockerfile.python  LICENSE  README.md  docker-compose.yml  main.py  neo4j.dump  project-spec.docx  project-spec.md  requirements.txt  s.sh
example1/: Dockerfile.jupyter  Groups.ipynb  Groups.md  Small Example1.ipynb  docker-compose.yml  export.csv  setup.md
example1-1/: Dockerfile.jupyter  Dockerfile.python  Groups.ipynb  Groups.py  Small Example1.ipynb  docker-compose.yml
example1-1/domains/: d4.txt.json  d5.txt.json  d6.txt.json
example1-1/groups/: Heat_It_And_Weep.txt  Mind_Over_Matter.txt  Mind_Over_Matter.txt.json  Pancreas_Pain.txt  last_hurrah.txt
example1/domains/: d1.txt.json  d2.txt.json
example1/groups/: Oops_Computer_Died.txt  Oops_Computer_Died.txt.json  Pancreas_Pain.txt.json  Xs_Os.txt  (+2 more)
neo4j_examples/: README.md
pyphy-starter/: .gitignore  .travis.yml  README.md  setup.cfg  setup.py
pyphy-starter/doc/: conf.py  prepyphy.rst  test_pyphy.rst
pyphy-starter/doc/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  prepyphy.doctree  pyphy.doctree  setup.doctree  test_pyphy.doctree
pyphy-starter/doc/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  prepyphy.html  py-modindex.html  pyphy.html  search.html  searchindex.js  setup.html  test_pyphy.html
pyphy-starter/doc/_build/html/_modules/: index.html  pyphy.html  test_pyphy.html
pyphy-starter/doc/_build/html/_sources/: index.rst.txt  modules.rst.txt  pyphy.rst.txt
pyphy-starter/src/pyphy/: pyphy.config
src/: main.py
(+19 files in other folders)
