[metadata]
name = pyphy
version = 1.0.4
author = Sixing Huang
author_email = dgg321982@gmail.com
description = A python package to interact with NCBI taxonomy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dgg32/pyphy
project_urls =
    Bug Tracker = https://github.com/dgg32/pyphy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src